Paring down the roost

--- a/deploy/advanced/grouper.html
+++ b/deploy/advanced/grouper.html
@@ -19,7 +19,7 @@
         </header>
         <nav>
                                 <ul>
-<li><a href="/index.html">Home</a></li><li><a href="/first-steps.html">First steps</a></li><li><a class="selected"href="/advanced/overview.html">Advanced topics</a></li><li><a href="/about.html">About</a></li></ul>
+<li><a href="/">Home</a></li><li><a href="/first-steps">First steps</a></li><li><a class="selected"href="/advanced/overview">Advanced topics</a></li><li><a href="/about">About</a></li></ul>
         </nav>
         <article id="content">
                     <h1>Grouping</h1>
@@ -30,46 +30,59 @@ conceivable measure. Groups can be traversed in a few ways in Hyde, and
 <p><em>Difficulty levels</em></p>
 <p><em>Basic</em></p>
 <ul>
-<li><a href="/about.html">About</a> \
+<li><a href="/about">About</a> \
     (about.html)</li>
-<li><a href="/first-steps.html">First steps</a> \
+<li><a href="/first-steps">First steps</a> \
     (first-steps.html)</li>
-<li><a href="/index.html">Index</a> \
+<li><a href="/">Index</a> \
     (index.html)</li>
 </ul>
 <p><em>Advanced</em></p>
 <ul>
-<li><a href="/advanced/grouper.html">Grouper</a> \
+<li><a href="/advanced/grouper">Grouper</a> \
     (grouper.html)</li>
-<li><a href="/advanced/overview.html">Overview</a> \
+<li><a href="/advanced/overview">Overview</a> \
     (overview.html)</li>
-<li><a href="/advanced/sorter.html">Sorter</a> \
+<li><a href="/advanced/sorter">Sorter</a> \
     (sorter.html)</li>
-<li><a href="/advanced/tagger.html">Tagger</a> \
+<li><a href="/advanced/tagger">Tagger</a> \
     (tagger.html)</li>
 </ul>
 <h2>Listing only the specific (sub)group</h2>
 <ul>
-<li><a href="/advanced/grouper.html">Grouper</a> \
+<li><a href="/advanced/grouper">Grouper</a> \
     (grouper.html)</li>
-<li><a href="/advanced/overview.html">Overview</a> \
+<li><a href="/advanced/overview">Overview</a> \
     (overview.html)</li>
-<li><a href="/advanced/sorter.html">Sorter</a> \
+<li><a href="/advanced/sorter">Sorter</a> \
     (sorter.html)</li>
-<li><a href="/advanced/tagger.html">Tagger</a> \
+<li><a href="/advanced/tagger">Tagger</a> \
     (tagger.html)</li>
 </ul>
 <div class="bottom_article_nav">
-<div class="next"><a href="/advanced/tagger.html">
+<div class="next"><a href="/advanced/tagger">
     Tagging</a>
     &gt;</div>
-<div class="prev">&lt; <a href="/advanced/sorter.html">
+
+<div class="prev">&lt; <a href="/advanced/sorter">
     Sorting</a>
     </div></div>        </article>
         <aside>
-            <p>Created by <a href="http://merlin.rebrovic.net">Merlin Rebrović</a>
+            <p>Created by <a href="http://samjacoby.com">Sam Jacoby</a>
             for <a href="http://hyde.github.com">Hyde</a></p>
         </aside>
 
-                    </body>
+                <script type="text/javascript">
+
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'XX-XXXXXXXX-X']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+
+</script>    </body>
 </html>
