--- a/deploy/advanced/overview.html
+++ b/deploy/advanced/overview.html
@@ -19,40 +19,40 @@
         </header>
         <nav>
                                 <ul>
-<li><a href="/index.html">Home</a></li><li><a href="/first-steps.html">First steps</a></li><li><a class="selected"href="/advanced/overview.html">Advanced topics</a></li><li><a href="/about.html">About</a></li></ul>
+<li><a href="/">Home</a></li><li><a href="/first-steps">First steps</a></li><li><a class="selected"href="/advanced/overview">Advanced topics</a></li><li><a href="/about">About</a></li></ul>
         </nav>
         <article id="content">
                     <h1>More advanced topics</h1>
 <p>If you have read and understood all basic topics covered in
-<a href="/index.html">Index</a> 
-<a href="/first-steps.html">First steps</a> 
-<a href="/about.html">About</a> 
+<a href="/">Index</a> 
+<a href="/first-steps">First steps</a> 
+<a href="/about">About</a> 
 then you are ready for some more advanced features. They are explained in
 the same way as the basic part, building on the knowledge of the previous,
 so it is recommended that you follow them in the listed order.</p>
 <ol>
 <li>\
-    <a href="/advanced/sorter.html">Sorter</a> \
+    <a href="/advanced/sorter">Sorter</a> \
      \
 <span class="tags">tags: 
 sort 
 </span></li>
 <li>\
-    <a href="/advanced/grouper.html">Grouper</a> \
+    <a href="/advanced/grouper">Grouper</a> \
      \
 <span class="tags">tags: 
 sort, 
 group 
 </span></li>
 <li>\
-    <a href="/advanced/tagger.html">Tagger</a> \
+    <a href="/advanced/tagger">Tagger</a> \
      \
 <span class="tags">tags: 
 sort, 
 tag 
 </span></li>
 <li>\
-    <a href="/advanced/overview.html">Overview</a> \
+    <a href="/advanced/overview">Overview</a> \
     <em>(this file)</em> \
 <span class="tags">tags: 
 sort, 
@@ -61,14 +61,27 @@ tag
 </span></li>
 </ol>
 <div class="bottom_article_nav">
-<div class="next"><a href="/advanced/sorter.html">
+<div class="next"><a href="/advanced/sorter">
     Sorting</a>
     &gt;</div>
+
 </div>        </article>
         <aside>
-            <p>Created by <a href="http://merlin.rebrovic.net">Merlin Rebrović</a>
+            <p>Created by <a href="http://samjacoby.com">Sam Jacoby</a>
             for <a href="http://hyde.github.com">Hyde</a></p>
         </aside>
 
-                    </body>
+                <script type="text/javascript">
+
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'XX-XXXXXXXX-X']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+
+</script>    </body>
 </html>
