--- a/deploy/first-steps.html
+++ b/deploy/first-steps.html
@@ -19,7 +19,7 @@
         </header>
         <nav>
                                 <ul>
-<li><a href="/index.html">Home</a></li><li><a class="selected"href="/first-steps.html">First steps</a></li><li><a href="/advanced/overview.html">Advanced topics</a></li><li><a href="/about.html">About</a></li></ul>
+<li><a href="/">Home</a></li><li><a class="selected"href="/first-steps">First steps</a></li><li><a href="/advanced/overview">Advanced topics</a></li><li><a href="/about">About</a></li></ul>
         </nav>
         <article id="content">
                     <h1>Walk this way if you're a beginner</h1>
@@ -65,9 +65,21 @@ just ignore them at the beginning.  They will start to make sense while
 you're working through the template or will be explicitly explained when
 the right time comes.</p>        </article>
         <aside>
-            <p>Created by <a href="http://merlin.rebrovic.net">Merlin Rebrović</a>
+            <p>Created by <a href="http://samjacoby.com">Sam Jacoby</a>
             for <a href="http://hyde.github.com">Hyde</a></p>
         </aside>
 
-                    </body>
+                <script type="text/javascript">
+
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'XX-XXXXXXXX-X']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+
+</script>    </body>
 </html>
