--- a/deploy/index.html
+++ b/deploy/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
     <head>
         <link href="http://fonts.googleapis.com/css?family=Anton" rel="stylesheet" type="text/css">
-        <title>Hyde Starter Kit </title>
+        <title>Yo.</title>
         <meta charset="utf-8" />
-        <link rel="stylesheet" href="/media/css/style.css">
+        <link rel="stylesheet" href="/media/css/reset.css">
         <!--[if lt IE 9]>
         <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js">
         </script>
@@ -19,7 +19,7 @@
         </header>
         <nav>
                                 <ul>
-<li><a class="selected"href="/index.html">Home</a></li><li><a href="/first-steps.html">First steps</a></li><li><a href="/advanced/overview.html">Advanced topics</a></li><li><a href="/about.html">About</a></li></ul>
+<li><a class="selected"href="/">Home</a></li><li><a href="/first-steps">First steps</a></li><li><a href="/advanced/overview">Advanced topics</a></li><li><a href="/about">About</a></li></ul>
         </nav>
         <article id="content">
                     <h1>What is this all about</h1>
@@ -36,9 +36,21 @@ technologies step by step. Those are:</p>
 </ul>
 <p>Are you ready for your <a href="first-steps.html">first steps</a>?</p>        </article>
         <aside>
-            <p>Created by <a href="http://merlin.rebrovic.net">Merlin Rebrović</a>
+            <p>Created by <a href="http://samjacoby.com">Sam Jacoby</a>
             for <a href="http://hyde.github.com">Hyde</a></p>
         </aside>
 
-                    </body>
+                <script type="text/javascript">
+
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'XX-XXXXXXXX-X']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+
+</script>    </body>
 </html>
