--- a/deploy/about.html
+++ b/deploy/about.html
@@ -19,11 +19,11 @@
         </header>
         <nav>
                                 <ul>
-<li><a href="/index.html">Home</a></li><li><a href="/first-steps.html">First steps</a></li><li><a href="/advanced/overview.html">Advanced topics</a></li><li><a class="selected"href="/about.html">About</a></li></ul>
+<li><a href="/">Home</a></li><li><a href="/first-steps">First steps</a></li><li><a href="/advanced/overview">Advanced topics</a></li><li><a class="selected"href="/about">About</a></li></ul>
         </nav>
         <article id="content">
                     <h1>About</h1>
-<p>This beginner's tutorial was created by <a href="http://merlin.rebrovic.net">Merlin Rebrović</a> for the
+<p>This beginner's tutorial was created by <a href="http://samjacoby.com">Merlin Rebrović</a> for the
 <a href="http://hyde.github.com">Hyde project</a>. It is included in Hyde as a layout named <em>starter</em>.
 If you have a <a href="http://hyde.github.com/install.html">default Hyde installation</a>, all you have to do is
 write:</p>
@@ -34,9 +34,21 @@ a bug, please visit Hyde Starter Kit's <a href="https://github.com/merlinrebrovi
 <h2>Attributions</h2>
 <p>The <a href="http://www.flickr.com/photos/batintherain/5613841957/">photo</a> used for part of the background.</p>        </article>
         <aside>
-            <p>Created by <a href="http://merlin.rebrovic.net">Merlin Rebrović</a>
+            <p>Created by <a href="http://samjacoby.com">Sam Jacoby</a>
             for <a href="http://hyde.github.com">Hyde</a></p>
         </aside>
 
-                    </body>
+                <script type="text/javascript">
+
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'XX-XXXXXXXX-X']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+
+</script>    </body>
 </html>
