--- a/deploy/advanced/sorter.html
+++ b/deploy/advanced/sorter.html
@@ -19,7 +19,7 @@
         </header>
         <nav>
                                 <ul>
-<li><a href="/index.html">Home</a></li><li><a href="/first-steps.html">First steps</a></li><li><a class="selected"href="/advanced/overview.html">Advanced topics</a></li><li><a href="/about.html">About</a></li></ul>
+<li><a href="/">Home</a></li><li><a href="/first-steps">First steps</a></li><li><a class="selected"href="/advanced/overview">Advanced topics</a></li><li><a href="/about">About</a></li></ul>
         </nav>
         <article id="content">
                     <h1>Sorting</h1>
@@ -28,28 +28,28 @@ allows you to walk the site tree and sort the resources by the predefined
 settings in your configuration file.</p>
 <p>You can list and sort by name all your content files.</p>
 <ul>
-<li><a href="/about.html">About</a> \
+<li><a href="/about">About</a> \
     (about.html)</li>
-<li><a href="/first-steps.html">First steps</a> \
+<li><a href="/first-steps">First steps</a> \
     (first-steps.html)</li>
-<li><a href="/advanced/grouper.html">Grouper</a> \
+<li><a href="/advanced/grouper">Grouper</a> \
     (grouper.html)</li>
-<li><a href="/index.html">Index</a> \
+<li><a href="/">Index</a> \
     (index.html)</li>
-<li><a href="/advanced/overview.html">Overview</a> \
+<li><a href="/advanced/overview">Overview</a> \
     (overview.html)</li>
-<li><a href="/advanced/sorter.html">Sorter</a> \
+<li><a href="/advanced/sorter">Sorter</a> \
     (sorter.html)</li>
-<li><a href="/advanced/tagger.html">Tagger</a> \
+<li><a href="/advanced/tagger">Tagger</a> \
     (tagger.html)</li>
 </ul>
 <p>Or list only those in the current node (folder). In this case that would be
 all advanced topics.</p>
 <ol>
-<li><a href="/advanced/overview.html">Overview</a></li>
-<li><a href="/advanced/sorter.html">Sorter</a></li>
-<li><a href="/advanced/grouper.html">Grouper</a></li>
-<li><a href="/advanced/tagger.html">Tagger</a></li>
+<li><a href="/advanced/overview">Overview</a></li>
+<li><a href="/advanced/sorter">Sorter</a></li>
+<li><a href="/advanced/grouper">Grouper</a></li>
+<li><a href="/advanced/tagger">Tagger</a></li>
 </ol>
 <p>Or sort files by type and then by size.</p>
 <ul>
@@ -66,16 +66,29 @@ all advanced topics.</p>
 <li>[YAML] meta.yaml</li>
 </ul>
 <div class="bottom_article_nav">
-<div class="next"><a href="/advanced/grouper.html">
+<div class="next"><a href="/advanced/grouper">
     Grouping</a>
     &gt;</div>
-<div class="prev">&lt; <a href="/advanced/overview.html">
+
+<div class="prev">&lt; <a href="/advanced/overview">
     Advanced topics</a>
     </div></div>        </article>
         <aside>
-            <p>Created by <a href="http://merlin.rebrovic.net">Merlin Rebrović</a>
+            <p>Created by <a href="http://samjacoby.com">Sam Jacoby</a>
             for <a href="http://hyde.github.com">Hyde</a></p>
         </aside>
 
-                    </body>
+                <script type="text/javascript">
+
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'XX-XXXXXXXX-X']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+
+</script>    </body>
 </html>
