--- a/deploy/advanced/tagger.html
+++ b/deploy/advanced/tagger.html
@@ -19,7 +19,7 @@
         </header>
         <nav>
                                 <ul>
-<li><a href="/index.html">Home</a></li><li><a href="/first-steps.html">First steps</a></li><li><a class="selected"href="/advanced/overview.html">Advanced topics</a></li><li><a href="/about.html">About</a></li></ul>
+<li><a href="/">Home</a></li><li><a href="/first-steps">First steps</a></li><li><a class="selected"href="/advanced/overview">Advanced topics</a></li><li><a href="/about">About</a></li></ul>
         </nav>
         <article id="content">
                     <h1>Tagging</h1>
@@ -31,43 +31,55 @@ used only for overview and grouping pages.</p>
 <h2>Listing by tags</h2>
 <p><em>sort</em></p>
 <ul>
-<li><a href="/advanced/grouper.html">Grouper</a> \
+<li><a href="/advanced/grouper">Grouper</a> \
     (grouper.html)</li>
-<li><a href="/advanced/overview.html">Overview</a> \
+<li><a href="/advanced/overview">Overview</a> \
     (overview.html)</li>
-<li><a href="/advanced/sorter.html">Sorter</a> \
+<li><a href="/advanced/sorter">Sorter</a> \
     (sorter.html)</li>
-<li><a href="/advanced/tagger.html">Tagger</a> \
+<li><a href="/advanced/tagger">Tagger</a> \
     (tagger.html)</li>
 </ul>
 <p><em>tag</em></p>
 <ul>
-<li><a href="/advanced/overview.html">Overview</a> \
+<li><a href="/advanced/overview">Overview</a> \
     (overview.html)</li>
-<li><a href="/advanced/tagger.html">Tagger</a> \
+<li><a href="/advanced/tagger">Tagger</a> \
     (tagger.html)</li>
 </ul>
 <p><em>group</em></p>
 <ul>
-<li><a href="/advanced/grouper.html">Grouper</a> \
+<li><a href="/advanced/grouper">Grouper</a> \
     (grouper.html)</li>
-<li><a href="/advanced/overview.html">Overview</a> \
+<li><a href="/advanced/overview">Overview</a> \
     (overview.html)</li>
 </ul>
 <h2>Tag combination</h2>
 <p>You can also search for combination of tags. If you search for a
 resource that has <strong>sort</strong>, <strong>tag</strong> and <strong>group</strong> tags, only an
-<a href="/advanced/overview.html">overview</a> 
+<a href="/advanced/overview">overview</a> 
 will be returned.</p>
 <div class="bottom_article_nav">
 
-<div class="prev">&lt; <a href="/advanced/grouper.html">
+<div class="prev">&lt; <a href="/advanced/grouper">
     Grouping</a>
     </div></div>        </article>
         <aside>
-            <p>Created by <a href="http://merlin.rebrovic.net">Merlin Rebrović</a>
+            <p>Created by <a href="http://samjacoby.com">Sam Jacoby</a>
             for <a href="http://hyde.github.com">Hyde</a></p>
         </aside>
 
-                    </body>
+                <script type="text/javascript">
+
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'XX-XXXXXXXX-X']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+
+</script>    </body>
 </html>
