--- a/content/advanced/sorter.html
+++ b/content/advanced/sorter.html
@@ -9,6 +9,10 @@ learning_order: 1
 Sorting
 =======
 
+{{ resource.meta.index }}
+{{ resource.meta.tags }}
+{{ resource.meta.learning_order }}
+
 There will come a time when you will need to list and sort resources. Hyde
 allows you to walk the site tree and sort the resources by the predefined
 settings in your configuration file.
