--- a/deploy/advanced/overview.html
+++ b/deploy/advanced/overview.html
@@ -2,9 +2,9 @@
 <html lang="en">
     <head>
         <link href="http://fonts.googleapis.com/css?family=Anton" rel="stylesheet" type="text/css">
-        <title>Hyde Starter Kit | Advanced topics</title>
+        <title>Sam Jacoby| Advanced topics</title>
         <meta charset="utf-8" />
-        <link rel="stylesheet" href="/media/css/style.css">
+        <link rel="stylesheet" href="/media/css/resets.css">
         <!--[if lt IE 9]>
         <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js">
         </script>
@@ -12,21 +12,15 @@
     </head>
     <body>
         <header>
-            <hgroup>
-            <h1><span>Hyde</span> Starter Kit</h1>
-            <h2>Know your tool</h2>
-            </hgroup>
+            <h1>Sam Jacoby<h1>
         </header>
         <nav>
                                 <ul>
-<li><a href="/">Home</a></li><li><a href="/first-steps">First steps</a></li><li><a class="selected"href="/advanced/overview">Advanced topics</a></li><li><a href="/about">About</a></li></ul>
+<li><a href="/">Home</a></li><li><a href="/posts">Posts</a></li><li><a href="/projects">Projects</a></li><li><a href="/printing">Printing</a></li><li><a href="/about">About</a></li></ul>
         </nav>
         <article id="content">
                     <h1>More advanced topics</h1>
 <p>If you have read and understood all basic topics covered in
-<a href="/">Index</a> 
-<a href="/first-steps">First steps</a> 
-<a href="/about">About</a> 
 then you are ready for some more advanced features. They are explained in
 the same way as the basic part, building on the knowledge of the previous,
 so it is recommended that you follow them in the listed order.</p>
@@ -41,8 +35,8 @@ sort
     <a href="/advanced/grouper">Grouper</a> \
      \
 <span class="tags">tags: 
-sort, 
-group 
+printing, 
+silver 
 </span></li>
 <li>\
     <a href="/advanced/tagger">Tagger</a> \
@@ -68,20 +62,8 @@ tag
 </div>        </article>
         <aside>
             <p>Created by <a href="http://samjacoby.com">Sam Jacoby</a>
-            for <a href="http://hyde.github.com">Hyde</a></p>
+            using <a href="http://hyde.github.com">Hyde</a></p>
         </aside>
 
-                <script type="text/javascript">
-
-  var _gaq = _gaq || [];
-  _gaq.push(['_setAccount', 'XX-XXXXXXXX-X']);
-  _gaq.push(['_trackPageview']);
-
-  (function() {
-    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-  })();
-
-</script>    </body>
+                    </body>
 </html>
