--- a/deploy/advanced/sorter.html
+++ b/deploy/advanced/sorter.html
@@ -2,9 +2,9 @@
 <html lang="en">
     <head>
         <link href="http://fonts.googleapis.com/css?family=Anton" rel="stylesheet" type="text/css">
-        <title>Hyde Starter Kit | Sorting</title>
+        <title>Sam Jacoby| Sorting</title>
         <meta charset="utf-8" />
-        <link rel="stylesheet" href="/media/css/style.css">
+        <link rel="stylesheet" href="/media/css/resets.css">
         <!--[if lt IE 9]>
         <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js">
         </script>
@@ -12,29 +12,31 @@
     </head>
     <body>
         <header>
-            <hgroup>
-            <h1><span>Hyde</span> Starter Kit</h1>
-            <h2>Know your tool</h2>
-            </hgroup>
+            <h1>Sam Jacoby<h1>
         </header>
         <nav>
                                 <ul>
-<li><a href="/">Home</a></li><li><a href="/first-steps">First steps</a></li><li><a class="selected"href="/advanced/overview">Advanced topics</a></li><li><a href="/about">About</a></li></ul>
+<li><a href="/">Home</a></li><li><a href="/posts">Posts</a></li><li><a href="/projects">Projects</a></li><li><a href="/printing">Printing</a></li><li><a href="/about">About</a></li></ul>
         </nav>
         <article id="content">
                     <h1>Sorting</h1>
+<p>2
+['sort']
+1</p>
 <p>There will come a time when you will need to list and sort resources. Hyde
 allows you to walk the site tree and sort the resources by the predefined
 settings in your configuration file.</p>
 <p>You can list and sort by name all your content files.</p>
 <ul>
-<li><a href="/about">About</a> \
-    (about.html)</li>
-<li><a href="/first-steps">First steps</a> \
-    (first-steps.html)</li>
 <li><a href="/advanced/grouper">Grouper</a> \
     (grouper.html)</li>
 <li><a href="/">Index</a> \
+    (index.html)</li>
+<li><a href="/about/">Index</a> \
+    (index.html)</li>
+<li><a href="/posts/">Index</a> \
+    (index.html)</li>
+<li><a href="/projects/">Index</a> \
     (index.html)</li>
 <li><a href="/advanced/overview">Overview</a> \
     (overview.html)</li>
@@ -42,6 +44,14 @@ settings in your configuration file.</p>
     (sorter.html)</li>
 <li><a href="/advanced/tagger">Tagger</a> \
     (tagger.html)</li>
+<li><a href="/test-steps">Test steps</a> \
+    (test-steps.html)</li>
+<li><a href="/posts/test">Test</a> \
+    (test.html)</li>
+<li><a href="/projects/test">Test</a> \
+    (test.html)</li>
+<li><a href="/projects/test2">Test2</a> \
+    (test2.html)</li>
 </ul>
 <p>Or list only those in the current node (folder). In this case that would be
 all advanced topics.</p>
@@ -53,15 +63,24 @@ all advanced topics.</p>
 </ol>
 <p>Or sort files by type and then by size.</p>
 <ul>
+<li>[] .hyde_deps</li>
+<li>[CSS] reset.css</li>
 <li>[CSS] style.css</li>
 <li>[HTML] index.html</li>
-<li>[HTML] about.html</li>
+<li>[HTML] index.html</li>
+<li>[HTML] test.html</li>
+<li>[HTML] test2.html</li>
+<li>[HTML] test.html</li>
+<li>[HTML] index.html</li>
+<li>[HTML] index.html</li>
 <li>[HTML] overview.html</li>
 <li>[HTML] tagger.html</li>
 <li>[HTML] grouper.html</li>
 <li>[HTML] sorter.html</li>
-<li>[HTML] first-steps.html</li>
+<li>[HTML] test-steps.html</li>
 <li>[JPG] background.jpg</li>
+<li>[YAML] meta.yaml</li>
+<li>[YAML] meta.yaml</li>
 <li>[YAML] meta.yaml</li>
 <li>[YAML] meta.yaml</li>
 </ul>
@@ -75,20 +94,8 @@ all advanced topics.</p>
     </div></div>        </article>
         <aside>
             <p>Created by <a href="http://samjacoby.com">Sam Jacoby</a>
-            for <a href="http://hyde.github.com">Hyde</a></p>
+            using <a href="http://hyde.github.com">Hyde</a></p>
         </aside>
 
-                <script type="text/javascript">
-
-  var _gaq = _gaq || [];
-  _gaq.push(['_setAccount', 'XX-XXXXXXXX-X']);
-  _gaq.push(['_trackPageview']);
-
-  (function() {
-    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-  })();
-
-</script>    </body>
+                    </body>
 </html>
