--- a/deploy/advanced/tagger.html
+++ b/deploy/advanced/tagger.html
@@ -2,9 +2,9 @@
 <html lang="en">
     <head>
         <link href="http://fonts.googleapis.com/css?family=Anton" rel="stylesheet" type="text/css">
-        <title>Hyde Starter Kit | Tagging</title>
+        <title>Sam Jacoby| Tagging</title>
         <meta charset="utf-8" />
-        <link rel="stylesheet" href="/media/css/style.css">
+        <link rel="stylesheet" href="/media/css/resets.css">
         <!--[if lt IE 9]>
         <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js">
         </script>
@@ -12,14 +12,11 @@
     </head>
     <body>
         <header>
-            <hgroup>
-            <h1><span>Hyde</span> Starter Kit</h1>
-            <h2>Know your tool</h2>
-            </hgroup>
+            <h1>Sam Jacoby<h1>
         </header>
         <nav>
                                 <ul>
-<li><a href="/">Home</a></li><li><a href="/first-steps">First steps</a></li><li><a class="selected"href="/advanced/overview">Advanced topics</a></li><li><a href="/about">About</a></li></ul>
+<li><a href="/">Home</a></li><li><a href="/posts">Posts</a></li><li><a href="/projects">Projects</a></li><li><a href="/printing">Printing</a></li><li><a href="/about">About</a></li></ul>
         </nav>
         <article id="content">
                     <h1>Tagging</h1>
@@ -31,8 +28,6 @@ used only for overview and grouping pages.</p>
 <h2>Listing by tags</h2>
 <p><em>sort</em></p>
 <ul>
-<li><a href="/advanced/grouper">Grouper</a> \
-    (grouper.html)</li>
 <li><a href="/advanced/overview">Overview</a> \
     (overview.html)</li>
 <li><a href="/advanced/sorter">Sorter</a> \
@@ -40,19 +35,27 @@ used only for overview and grouping pages.</p>
 <li><a href="/advanced/tagger">Tagger</a> \
     (tagger.html)</li>
 </ul>
+<p><em>printing</em></p>
+<ul>
+<li><a href="/advanced/grouper">Grouper</a> \
+    (grouper.html)</li>
+</ul>
+<p><em>group</em></p>
+<ul>
+<li><a href="/advanced/overview">Overview</a> \
+    (overview.html)</li>
+</ul>
+<p><em>silver</em></p>
+<ul>
+<li><a href="/advanced/grouper">Grouper</a> \
+    (grouper.html)</li>
+</ul>
 <p><em>tag</em></p>
 <ul>
 <li><a href="/advanced/overview">Overview</a> \
     (overview.html)</li>
 <li><a href="/advanced/tagger">Tagger</a> \
     (tagger.html)</li>
-</ul>
-<p><em>group</em></p>
-<ul>
-<li><a href="/advanced/grouper">Grouper</a> \
-    (grouper.html)</li>
-<li><a href="/advanced/overview">Overview</a> \
-    (overview.html)</li>
 </ul>
 <h2>Tag combination</h2>
 <p>You can also search for combination of tags. If you search for a
@@ -66,20 +69,8 @@ will be returned.</p>
     </div></div>        </article>
         <aside>
             <p>Created by <a href="http://samjacoby.com">Sam Jacoby</a>
-            for <a href="http://hyde.github.com">Hyde</a></p>
+            using <a href="http://hyde.github.com">Hyde</a></p>
         </aside>
 
-                <script type="text/javascript">
-
-  var _gaq = _gaq || [];
-  _gaq.push(['_setAccount', 'XX-XXXXXXXX-X']);
-  _gaq.push(['_trackPageview']);
-
-  (function() {
-    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-  })();
-
-</script>    </body>
+                    </body>
 </html>
