--- a/deploy/index.html
+++ b/deploy/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
     <head>
         <link href="http://fonts.googleapis.com/css?family=Anton" rel="stylesheet" type="text/css">
-        <title>Yo.</title>
+        <title>Sam Jacoby</title>
         <meta charset="utf-8" />
-        <link rel="stylesheet" href="/media/css/reset.css">
+        <link rel="stylesheet" href="/media/css/resets.css">
         <!--[if lt IE 9]>
         <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js">
         </script>
@@ -12,45 +12,19 @@
     </head>
     <body>
         <header>
-            <hgroup>
-            <h1><span>Hyde</span> Starter Kit</h1>
-            <h2>Know your tool</h2>
-            </hgroup>
+            <h1>Sam Jacoby<h1>
         </header>
         <nav>
                                 <ul>
-<li><a class="selected"href="/">Home</a></li><li><a href="/first-steps">First steps</a></li><li><a href="/advanced/overview">Advanced topics</a></li><li><a href="/about">About</a></li></ul>
+<li><a href="/">Home</a></li><li><a href="/posts">Posts</a></li><li><a href="/projects">Projects</a></li><li><a href="/printing">Printing</a></li><li><a href="/about">About</a></li></ul>
         </nav>
         <article id="content">
-                    <h1>What is this all about</h1>
-<p>Starter Kit introduces you to Hyde's many options and possibilities.
-Finding your way for the first time can be a bit confusing, so this
-template tries to ease your way in by exposing only core features and
-technologies step by step. Those are:</p>
-<ul>
-<li>basic Hyde site structure</li>
-<li>configuration file</li>
-<li>Jinja templates</li>
-<li>Markdown</li>
-<li>basic metadata and plugins</li>
-</ul>
-<p>Are you ready for your <a href="first-steps.html">first steps</a>?</p>        </article>
+                    <h2>What is this all about</h2>
+<p>This is my website.</p>        </article>
         <aside>
             <p>Created by <a href="http://samjacoby.com">Sam Jacoby</a>
-            for <a href="http://hyde.github.com">Hyde</a></p>
+            using <a href="http://hyde.github.com">Hyde</a></p>
         </aside>
 
-                <script type="text/javascript">
-
-  var _gaq = _gaq || [];
-  _gaq.push(['_setAccount', 'XX-XXXXXXXX-X']);
-  _gaq.push(['_trackPageview']);
-
-  (function() {
-    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-  })();
-
-</script>    </body>
+                    </body>
 </html>
