--- a/deploy/advanced/grouper.html
+++ b/deploy/advanced/grouper.html
@@ -2,9 +2,9 @@
 <html lang="en">
     <head>
         <link href="http://fonts.googleapis.com/css?family=Anton" rel="stylesheet" type="text/css">
-        <title>Hyde Starter Kit | Grouping</title>
+        <title>Sam Jacoby| Grouping</title>
         <meta charset="utf-8" />
-        <link rel="stylesheet" href="/media/css/style.css">
+        <link rel="stylesheet" href="/media/css/resets.css">
         <!--[if lt IE 9]>
         <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js">
         </script>
@@ -12,14 +12,11 @@
     </head>
     <body>
         <header>
-            <hgroup>
-            <h1><span>Hyde</span> Starter Kit</h1>
-            <h2>Know your tool</h2>
-            </hgroup>
+            <h1>Sam Jacoby<h1>
         </header>
         <nav>
                                 <ul>
-<li><a href="/">Home</a></li><li><a href="/first-steps">First steps</a></li><li><a class="selected"href="/advanced/overview">Advanced topics</a></li><li><a href="/about">About</a></li></ul>
+<li><a href="/">Home</a></li><li><a href="/posts">Posts</a></li><li><a href="/projects">Projects</a></li><li><a href="/printing">Printing</a></li><li><a href="/about">About</a></li></ul>
         </nav>
         <article id="content">
                     <h1>Grouping</h1>
@@ -27,17 +24,24 @@
 conceivable measure. Groups can be traversed in a few ways in Hyde, and 
 <a href="sorter.html">sorted</a> at the same time. Here are two common ways:</p>
 <h2>Walking all groups and subgroups</h2>
-<p><em>Difficulty levels</em></p>
-<p><em>Basic</em></p>
+<p>goo</p>
+<p><em>Various categories that items belong to.</em></p>
+<p>goo</p>
+<p><em>Blog</em></p>
 <ul>
-<li><a href="/about">About</a> \
-    (about.html)</li>
-<li><a href="/first-steps">First steps</a> \
-    (first-steps.html)</li>
-<li><a href="/">Index</a> \
+<li><a href="/posts/">Index</a> \
     (index.html)</li>
+<li><a href="/posts/test">Test</a> \
+    (test.html)</li>
 </ul>
-<p><em>Advanced</em></p>
+<p>goo</p>
+<p><em>Printing</em></p>
+<ul>
+<li><a href="/projects/test">Test</a> \
+    (test.html)</li>
+</ul>
+<p>goo</p>
+<p><em>Projects</em></p>
 <ul>
 <li><a href="/advanced/grouper">Grouper</a> \
     (grouper.html)</li>
@@ -47,17 +51,13 @@ conceivable measure. Groups can be traversed in a few ways in Hyde, and
     (sorter.html)</li>
 <li><a href="/advanced/tagger">Tagger</a> \
     (tagger.html)</li>
+<li><a href="/projects/test2">Test2</a> \
+    (test2.html)</li>
 </ul>
 <h2>Listing only the specific (sub)group</h2>
 <ul>
-<li><a href="/advanced/grouper">Grouper</a> \
-    (grouper.html)</li>
-<li><a href="/advanced/overview">Overview</a> \
-    (overview.html)</li>
-<li><a href="/advanced/sorter">Sorter</a> \
-    (sorter.html)</li>
-<li><a href="/advanced/tagger">Tagger</a> \
-    (tagger.html)</li>
+<li><a href="/projects/test">Test</a> \
+    (test.html)</li>
 </ul>
 <div class="bottom_article_nav">
 <div class="next"><a href="/advanced/tagger">
@@ -69,20 +69,8 @@ conceivable measure. Groups can be traversed in a few ways in Hyde, and
     </div></div>        </article>
         <aside>
             <p>Created by <a href="http://samjacoby.com">Sam Jacoby</a>
-            for <a href="http://hyde.github.com">Hyde</a></p>
+            using <a href="http://hyde.github.com">Hyde</a></p>
         </aside>
 
-                <script type="text/javascript">
-
-  var _gaq = _gaq || [];
-  _gaq.push(['_setAccount', 'XX-XXXXXXXX-X']);
-  _gaq.push(['_trackPageview']);
-
-  (function() {
-    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-  })();
-
-</script>    </body>
+                    </body>
 </html>
