What's going on?

--- a/site/content/printing/easter-week.html
+++ b/site/content/printing/easter-week.html
@@ -1,14 +1,14 @@
-{% extends "_post.html" %}
+{% extends "post.j2" %}
 
-{% hyde
+---
     author: Anton Chekhov
     title: Easter Week
     summary: "A new translation with accompanying wood engravings." 
     pivot: True
     exclude: False
-    categories: 
+    category: 
         - printing
-%}
+---
 
 {% block article %}
 Two Chekhov stories--"The Student," and "On Easter Eve"--in new translation--courtesty of [Michael Henry Heim](http://www.humnet.ucla.edu/humnet/slavic/faculty/heim_m.html). These stories are two favorites of mine--and I even read [somewhere][1] that "The Student" was Chekhov's own favorite. It's a spectacular update on the standard [Constance Garnett](http://en.wikipedia.org/wiki/Constance_Garnett) translations. Handprinted on a Vandercook Universal I from mint Dante types. The paper was smuggled in from Germany.
