--- a/site/content/printing/few-faces-emil-rudolf-weiss.html
+++ b/site/content/printing/few-faces-emil-rudolf-weiss.html
@@ -1,12 +1,12 @@
-{% extends "_post.html" %}
+{% extends "post.j2" %}
 
-{% hyde
+---
     author:
     title: A Few Faces of Emil Rudolf Weiss
     summary: "A Type Specimen"
-    categories: 
+    category: 
         - printing
-%}
+---
 
 {% block article %}
 <h4>A specimen book</h4>
