--- a/site/content/printing/reading-group-forty-seven.html
+++ b/site/content/printing/reading-group-forty-seven.html
@@ -1,12 +1,12 @@
-{% extends "_post.html" %}
+{% extends "post.j2" %}
 
-{% hyde
+---
     author: Paul Celan
     title: A Reading for Group 47
     summary: "German with English translations of Celan's youthful poems."
-    categories: 
+    category: 
         - printing    
-%}
+---
 
 {% block article %}
 I first stumbled on "Todesfuge" while working in Nicaragau--and before I could read German. It was shocking, brutal, powerful. I read it in English, then in Spanish translation--parsing through the German as best I could. 
