--- a/site/content/printing/sesquipedality.html
+++ b/site/content/printing/sesquipedality.html
@@ -1,11 +1,11 @@
-{% extends "_post.html" %}
+{% extends "post.j2" %}
 
-{% hyde
+---
     title: Sesquipedality
     summary: "A small collection of difficult words."
-    categories: 
+    category: 
         - printing
-%}
+---
 
 {% block article %}
 A small collection of difficult words culled from a variety of eccentric dictionaries. Includes useful gems like _totipalmate_, meaning, web-toed.
