--- a/site/content/printing/useful-words-grammar.html
+++ b/site/content/printing/useful-words-grammar.html
@@ -1,12 +1,12 @@
-{% extends "_post.html" %}
+{% extends "post.j2" %}
 
-{% hyde
+---
     author:
     title: "Useful Words & Grammar"
     summary: "A learner's guide to the German Language"
-    categories: 
+    category: 
         - printing
-%}
+---
 
 {% block article %}
 <h4>A learner's guide to the German Language</h4>
