--- a/site/content/printing/wallau-broadside.html
+++ b/site/content/printing/wallau-broadside.html
@@ -1,12 +1,12 @@
-{% extends "_post.html" %}
+{% extends "post.j2" %}
 
-{% hyde
+---
     author: Rudolf Koch
     title: Wallau Broadside
     summary: "A small collection of difficult words."
-    categories:
+    category:
         - printing
-%}
+---
 
 {% block article %}
 This broadside was printed in Mainz, Germany, at the _Druckladen des Gutenberg Museums_. It's Rudolf Koch's Wallau, a _rundgotisch_ typeface, with elements of classic German blackletter and traditional roman capitals.
