--- a/site/content/printing/awful-german-language.html
+++ b/site/content/printing/awful-german-language.html
@@ -1,12 +1,12 @@
-{% extends "_post.html" %}
+{% extends "post.j2" %}
 
-{% hyde
+---
     author: Mark Twain
     title: The Awful German Language
     summary: "An essay on the trials and trevails of learning."
-    categories: 
+    category: 
         - printing
-%}
+---
 
 {% block article %}
 Learning German is hard. Twain got that like no other. This essay, originally an appendix in _The Tramps Abroad_, details his trials and trevails of trying to master _deutsch_, and was a great solace to me while attempting to do the same. 
