--- a/site/content/printing/awful-german-language.html
+++ b/site/content/printing/awful-german-language.html
@@ -4,6 +4,7 @@
     author: Mark Twain
     title: The Awful German Language
     summary: "An essay on the trials and trevails of learning."
+    exclude: true
     category: 
         - printing
 ---
