--- a/site/content/printing/reading-group-forty-seven.html
+++ b/site/content/printing/reading-group-forty-seven.html
@@ -4,8 +4,7 @@
     author: Paul Celan
     title: A Reading for Group 47
     summary: "German with English translations of Celan's youthful poems."
-    category: 
-        - printing    
+    category: printing
 ---
 
 {% block article %}
