--- a/site/content/work/awful-german-language.html
+++ b/site/content/work/awful-german-language.html
@@ -8,7 +8,7 @@ Learning German is hard. Twain got that like no other. This essay, originally an
 
 Printed at the _Druckladen_ of the Gutenberg Museum, in Mainz, Germany, making use of some of the unusual typefaces in their extensive collection. 
 <div class="gallery">
-    <img src="{{ site.url }}/media/images/printing/{{ page.page_name }}/awful-1.jpg" />
-    <img src="{{ site.url }}/media/images/printing/{{ page.page_name }}/awful-2.jpg" />
-    <img src="{{ site.url }}/media/images/printing/{{ page.page_name }}/awful-3.jpg" />
+    <img src="{{ media_url('img/awful-1.jpg') }}"/>
+    <img src="{{ media_url('img/awful-2.jpg') }}"/>
+    <img src="{{ media_url('img/awful-3.jpg') }}"/>
 </div>
