--- a/site/content/work/easter-week.html
+++ b/site/content/work/easter-week.html
@@ -9,16 +9,16 @@ The stories are flanked by [Barry Moser's](http://www.moser-pennyroyal.com/) dar
 
 [1]: <http://books.google.com/books?id=Vk8XRRYl938C&printsec=frontcover&dq=heim+karlinksy++chekhov+life+thought&hl=en&ei=OwgFTbXnBs2r8AaUv8HnAg&sa=X&oi=book_result&ct=result&resnum=1&ved=0CCkQ6AEwAA#v=onepage&q&f=false>
 <div class="gallery">
-    <img src="{{ site.url }}/media/images/printing/{{ page.page_name }}/easter-10.jpg" />
-    <img src="{{ site.url }}/media/images/printing/{{ page.page_name }}/easter-1.jpg" />
-    <img src="{{ site.url }}/media/images/printing/{{ page.page_name }}/easter-2.jpg" />
-    <img src="{{ site.url }}/media/images/printing/{{ page.page_name }}/easter-3.jpg" />
-    <img src="{{ site.url }}/media/images/printing/{{ page.page_name }}/easter-4.jpg" />
-    <img src="{{ site.url }}/media/images/printing/{{ page.page_name }}/easter-5.jpg" />
-    <img src="{{ site.url }}/media/images/printing/{{ page.page_name }}/easter-6.jpg" />
-    <img src="{{ site.url }}/media/images/printing/{{ page.page_name }}/easter-7.jpg" />
-    <img src="{{ site.url }}/media/images/printing/{{ page.page_name }}/easter-8.jpg" />
-    <img src="{{ site.url }}/media/images/printing/{{ page.page_name }}/easter-9.jpg" />
+    <img src="{{ media_url('img/easter-10.jpg') }}"/>
+    <img src="{{ media_url('img/easter-1.jpg') }}"/>
+    <img src="{{ media_url('img/easter-2.jpg') }}"/>
+    <img src="{{ media_url('img/easter-3.jpg') }}"/>
+    <img src="{{ media_url('img/easter-4.jpg') }}"/>
+    <img src="{{ media_url('img/easter-5.jpg') }}"/>
+    <img src="{{ media_url('img/easter-6.jpg') }}"/>
+    <img src="{{ media_url('img/easter-7.jpg') }}"/>
+    <img src="{{ media_url('img/easter-8.jpg') }}"/>
+    <img src="{{ media_url('img/easter-9.jpg') }}"/>
 </div>
 
 
