--- a/site/content/work/few-faces-emil-rudolf-weiss.html
+++ b/site/content/work/few-faces-emil-rudolf-weiss.html
@@ -14,8 +14,8 @@ I published this small specimen book in two editions, German and English. Weiß 
 
 Hand-printed on a Korrex cylinder press on Zerkall papers.
 <div class="gallery">
-    <img src="{{ site.url }}/media/images/printing/{{ page.page_name }}/few-faces-1.jpg" />
-    <img src="{{ site.url }}/media/images/printing/{{ page.page_name }}/few-faces-2.jpg" />
+    <img src="{{ media_url('img/few-faces-1.jpg') }}"/>
+    <img src="{{ media_url('img/few-faces-2.jpg') }}"/>
 </div>
 
 
