--- a/site/content/work/reading-group-forty-seven.html
+++ b/site/content/work/reading-group-forty-seven.html
@@ -10,11 +10,11 @@ _A Reading for Group 47_ reprints "Todesfuge", and three other poems in Celan's 
 
 Printed in Eric Gill's Sans and Joanna on mouldmade Zerkall book papers.
 <div class="gallery">
-    <img src="{{ site.url }}/media/images/printing/{{ page.page_name }}/celan-2.jpg" />
-    <img src="{{ site.url }}/media/images/printing/{{ page.page_name }}/celan-6.jpg" />
-    <img src="{{ site.url }}/media/images/printing/{{ page.page_name }}/celan-3.jpg" />
-    <img src="{{ site.url }}/media/images/printing/{{ page.page_name }}/celan-4.jpg" />
-    <img src="{{ site.url }}/media/images/printing/{{ page.page_name }}/celan-5.jpg" />
+    <img src="{{ media_url('img/celan-2.jpg') }}"/>
+    <img src="{{ media_url('img/celan-6.jpg') }}"/>
+    <img src="{{ media_url('img/celan-3.jpg') }}"/>
+    <img src="{{ media_url('img/celan-4.jpg') }}"/>
+    <img src="{{ media_url('img/celan-5.jpg') }}"/>
 </div>
 
 
