--- a/site/content/work/sesquipedality.html
+++ b/site/content/work/sesquipedality.html
@@ -7,9 +7,9 @@ A small collection of difficult words culled from a variety of eccentric diction
 
 Letterpress printed on Zerkall papers and handbound in wrappers. 
 <div class="gallery">
-    <img src="{{ site.url }}/media/images/printing/{{ page.page_name }}/sesquip-1.jpg" />
-    <img src="{{ site.url }}/media/images/printing/{{ page.page_name }}/sesquip-2.jpg" />
-    <img src="{{ site.url }}/media/images/printing/{{ page.page_name }}/sesquip-3.jpg" />
+    <img src="{{ media_url('img/sesquip-1.jpg') }}"/>
+    <img src="{{ media_url('img/sesquip-2.jpg') }}"/>
+    <img src="{{ media_url('img/sesquip-3.jpg') }}"/>
 </div>
 
 
