--- a/site/content/work/wallau-broadside.html
+++ b/site/content/work/wallau-broadside.html
@@ -7,8 +7,8 @@ summary: "A small collection of difficult words."
 
 This broadside was printed in Mainz, Germany, at the _Druckladen des Gutenberg Museums_. It's Rudolf Koch's Wallau, a _rundgotisch_ typeface, with elements of classic German blackletter and traditional roman capitals.
 <div class="gallery">
-    <img src="{{ site.url }}/media/images/printing/{{ page.page_name }}/wallau-1.jpg" />
-    <img src="{{ site.url }}/media/images/printing/{{ page.page_name }}/wallau-2.jpg" />
+    <img src="{{ media_url('img/wallau-1.jpg') }}"/>
+    <img src="{{ media_url('img/wallau-2.jpg') }}"/>
 </div>
 
 
